infra/k8s/environments/prod/app/ingress-patch.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  namespace: todo-app
  annotations:
    external-dns.alpha.kubernetes.io/hostname: internal-app-prod.natsuki-cloud.dev
spec:
  rules:
    - host: internal-app-prod.natsuki-cloud.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /tasks
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3002
          - path: /callback
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
  tls:
    - hosts:
        - internal-app-prod.natsuki-cloud.dev
      secretName: internal-app-prod-natsuki-cloud-dev
